# pull-10ks

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  environment.yml  packages.txt  pull_10ks.py  pyproject.toml  requirements.txt  test_pull_10ks.py
.devcontainer/: devcontainer.json
pull_10ks/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py
